--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <header>
         <div class="container">
             <nav>
-                <a href="#" class="logo"><img src="logo.png" alt="Naala Africa Labs Logo">Naala Africa Labs</a>
+                <a href="#" class="logo"><img src="logo.svg" alt="Naala Africa Labs Logo">Naala Africa Labs</a>
                 <ul>
                     <li><a href="#about">About Us</a></li>
                     <li><a href="#services">Services</a></li>
@@ -43,67 +43,34 @@
             <p class="section-intro">We offer a comprehensive range of AI services designed to help businesses innovate and grow. Explore our key offerings below.</p>
             <div class="services-grid">
                 <div class="service">
-                    <i class="fas fa-cogs"></i>
-                    <h3>AI Solutions</h3>
-                    <p>We develop custom AI tools to help businesses streamline processes and boost productivity. We build solutions that cut across industries.</p>
+                    <img src="https://via.placeholder.com/300x200" alt="AI Solutions">
+                    <h3>Custom AI Solutions</h3>
+                    <p>We develop bespoke AI tools to help businesses streamline processes, boost productivity, and solve complex challenges across various industries.</p>
                 </div>
                 <div class="service">
-                    <i class="fas fa-chalkboard-teacher"></i>
-                    <h3>AI Training</h3>
-                    <p>Our AI and data science courses provide practical skills for individuals and organizations, ensuring they stay competitive in the tech-driven world.</p>
+                    <img src="https://via.placeholder.com/300x200" alt="AI Training">
+                    <h3>AI Training & Workshops</h3>
+                    <p>Our practical AI and data science courses empower individuals and organizations with the skills needed to stay competitive in a tech-driven world.</p>
                 </div>
                 <div class="service">
-                    <i class="fas fa-briefcase"></i>
-                    <h3>Consulting</h3>
+                    <img src="https://via.placeholder.com/300x200" alt="AI Consulting">
+                    <h3>Strategic AI Consulting</h3>
                     <p>We guide companies through AI integration, helping them build a data-driven culture, optimize operations, and drive innovation with tailored strategies.</p>
                 </div>
                 <div class="service">
-                    <i class="fas fa-robot"></i>
-                    <h3>AI Agents</h3>
+                    <img src="https://via.placeholder.com/300x200" alt="Conversational AI">
+                    <h3>Conversational AI</h3>
+                    <p>We build intelligent chatbots and voice agents that provide exceptional customer service and automate communication on your data.</p>
                 </div>
                 <div class="service">
-                    <i class="fas fa-comments"></i>
-                    <h3>Conversational Agents</h3>
-                </div>
-                <div class="service">
-                    <i class="fas fa-brain"></i>
-                    <h3>Custom LLMs and SLMs</h3>
-                </div>
-                <div class="service">
-                    <i class="fas fa-eye"></i>
+                    <img src="https://via.placeholder.com/300x200" alt="Computer Vision">
                     <h3>Computer Vision</h3>
+                    <p>Our computer vision solutions enable machines to interpret and understand the visual world, unlocking new possibilities in automation and analytics.</p>
                 </div>
                 <div class="service">
-                    <i class="fas fa-microphone-alt"></i>
-                    <h3>Voice Agents on Your Data</h3>
-                </div>
-                <div class="service">
-                    <i class="fas fa-chart-line"></i>
-                    <h3>Predictive Analytics and Insights</h3>
-                </div>
-                <div class="service">
-                    <i class="fas fa-shield-alt"></i>
-                    <h3>AI for Cybersecurity</h3>
-                </div>
-                <div class="service">
-                    <i class="fas fa-dollar-sign"></i>
-                    <h3>AI in Financial Services</h3>
-                </div>
-                <div class="service">
-                    <i class="fas fa-heartbeat"></i>
-                    <h3>AI in Healthcare</h3>
-                </div>
-                <div class="service">
-                    <i class="fas fa-shopping-cart"></i>
-                    <h3>AI in Retail and E-commerce</h3>
-                </div>
-                <div class="service">
-                    <i class="fas fa-industry"></i>
-                    <h3>AI in Manufacturing</h3>
-                </div>
-                <div class="service">
-                    <i class="fas fa-users"></i>
-                    <h3>AI in Human Resources</h3>
+                    <img src="https://via.placeholder.com/300x200" alt="Predictive Analytics">
+                    <h3>Predictive Analytics</h3>
+                    <p>We leverage your data to build predictive models that provide actionable insights, helping you make smarter business decisions.</p>
                 </div>
             </div>
         </div>
